<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/navbtn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:accessibilityHeading="true"
            android:background="@null"
            app:srcCompat="@drawable/nav_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="Welcome, Home"
            android:textSize="25dp" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <RelativeLayout
                android:id="@+id/relative_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btn_cart"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="right"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:accessibilityHeading="true"
                    android:background="@null"
                    app:srcCompat="@drawable/cart" />

            </RelativeLayout>

            <TextView
                android:id="@+id/badge_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/relative_layout"
                android:layout_margin="10dp"
                android:background="@drawable/item_count"
                android:gravity="center"
                android:textColor="#FFF"
                android:textSize="10sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/home_popular"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="20dp"
                            card_view:cardCornerRadius="6dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="85dp"
                                    android:scaleType="center"
                                    app:srcCompat="@drawable/bg_photo" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/app_name" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/temporary_description" />

                                <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                                    android:layout_margin="10dp"
                                    android:background="@null"
                                    android:text="@string/order_button"
                                    android:textColor="@color/colorAccent" />

                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="20dp"
                            card_view:cardCornerRadius="6dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="85dp"
                                    android:scaleType="center"
                                    app:srcCompat="@drawable/bg_photo" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/app_name" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/temporary_description" />

                                <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                                    android:layout_margin="10dp"
                                    android:background="@null"
                                    android:text="@string/order_button"
                                    android:textColor="@color/colorAccent" />

                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="20dp"
                            card_view:cardCornerRadius="6dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="85dp"
                                    android:scaleType="center"
                                    app:srcCompat="@drawable/bg_photo" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/app_name" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/temporary_description" />

                                <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                                    android:layout_margin="10dp"
                                    android:background="@null"
                                    android:text="@string/order_button"
                                    android:textColor="@color/colorAccent" />

                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="20dp"
                            card_view:cardCornerRadius="6dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="85dp"
                                    android:scaleType="center"
                                    app:srcCompat="@drawable/bg_photo" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/app_name" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/temporary_description" />

                                <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                                    android:layout_margin="10dp"
                                    android:background="@null"
                                    android:text="@string/order_button"
                                    android:textColor="@color/colorAccent" />

                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                    </LinearLayout>

                </HorizontalScrollView>

                <Button
                    android:id="@+id/btnScanBarcode"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:background="@drawable/rounded_button"
                    android:padding="10dp"
                    android:text="Scan Barcode"
                    android:textColor="@color/white" />

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>

